Android Money Management App V1

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="American_Green"> #35B234</color>
     <color name="light_green">#6AAF6A</color>
 
+    <color name="light_blue">#57BEC3</color>
+
 </resources>
