--- a/app/src/main/res/layout/list_item_investment.xml
+++ b/app/src/main/res/layout/list_item_investment.xml
@@ -2,11 +2,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/investmentParent"
+    android:layout_margin="15dp"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="8dp"
+
+    app:cardCornerRadius="10dp"
+    app:cardElevation="10dp"
     android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
