--- a/app/src/main/res/layout/listitem_transaction.xml
+++ b/app/src/main/res/layout/listitem_transaction.xml
@@ -20,7 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
+           android:layout_marginTop="63dp"
+
             android:layout_marginEnd="10dp"
             android:text="+ 0.0"
             android:textColor="@color/American_Green"
