Android Money Management App V1

--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -29,6 +29,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:hint="Amount"
+                    android:inputType="numberDecimal"
                     android:id="@+id/edttxtAmountTransfer"/>
 
 
