--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -11,18 +11,20 @@
         android:layout_height="wrap_content"
         android:text="Loan Activity"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:id="@+id/txtLoan"
         android:textSize="18sp"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/loansrecview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/loansrecview"
         android:layout_below="@id/txtLoan"
-        android:layout_marginTop="15dp"
-        android:padding="10dp"
-        android:layout_marginBottom="50dp"/>
+
+        android:layout_marginBottom="50dp"
+        android:layout_margin="8dp"
+        android:padding="10dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavView"
