--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -82,7 +82,7 @@
                         android:text="Send" />
 
                     <RadioButton
-                        android:id="@+id/rcrecieve"
+                        android:id="@+id/rbrecieve"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Receive" />
@@ -111,6 +111,8 @@
                     android:text="0.0" />
 
                 <Button
+                    android:id="@+id/btnSearch"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/edttxtMin"
@@ -141,7 +143,7 @@
                     android:textStyle="bold" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/transactionsrecview"
+                    android:id="@+id/transactionsrecview1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/txtviewtransactions"
@@ -166,8 +168,9 @@
 
 
     </androidx.core.widget.NestedScrollView>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavView"
+        android:id="@+id/bottomNavViewtransaction"
         android:layout_width="match_parent"
         android:layout_height="63dp"
         android:layout_alignParentBottom="true"
