--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/main_activity_toolbar_menu"
-        android:background="@color/American_Green" />
+        android:background="@color/American_Green"
+        app:menu="@menu/main_activity_toolbar_menu" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavView"
@@ -26,8 +26,8 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fbTransaction"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="105dp"
+        android:layout_height="105dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="20dp"
@@ -64,9 +64,21 @@
                         android:layout_centerVertical="true"
                         android:layout_marginStart="11dp"
                         android:layout_marginTop="8dp"
-                        android:text="Welcome to Aria Bank"
+                        android:text="Welcome to your bank,"
                         android:textSize="20sp"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/Name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="7dp"
+                        android:layout_toEndOf="@id/txtwelcome"
+                        android:text="Name"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
 
                     <TextView
                         android:id="@+id/txtAmount"
