--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,10 +13,10 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="110dp"
-            android:layout_height="60dp"
+            android:layout_width="130dp"
+            android:layout_height="90dp"
             android:layout_centerHorizontal="true"
-            android:src="@mipmap/td_logo" />
+            android:src="@mipmap/logo" />
 
         <EditText
             android:id="@+id/edttxtemail"
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/logo"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginRight="30dp"
             android:hint="@string/email"
 
