--- a/app/src/main/res/layout/activity_shopping.xml
+++ b/app/src/main/res/layout/activity_shopping.xml
@@ -59,7 +59,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
-                    android:src="@drawable/ic_launcher_background" />
+                    android:src="@drawable/ic_transaction" />
 
                 <EditText
                     android:id="@+id/edttxtPrice"
