--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -14,19 +14,41 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/accactivity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Account's Activity: "
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="15dp"
+                android:textStyle="bold"/>
 
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/barChartActivities"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="350dp"
+                android:layout_height="350dp"
+                android:layout_below="@id/accactivity"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="25dp" />
 
+            <TextView
+                android:id="@+id/txtpe"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/barChartActivities"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:text="Loans Chart: "
+                android:textStyle="bold" />
+
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/pieChartLoans"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_below="@id/barChartActivities"
+                android:layout_width="350dp"
+                android:layout_height="350dp"
+                android:layout_below="@id/txtpe"
+                android:layout_marginBottom="8dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp" />
 
