--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -30,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/txtFilters"
+                android:layout_margin="15dp"
                 android:layout_centerHorizontal="true">
 
                 <RadioGroup
