--- a/app/src/main/res/layout/activity_investment.xml
+++ b/app/src/main/res/layout/activity_investment.xml
@@ -22,5 +22,14 @@
         app:itemIconTint="@color/bottomnavcolor"
         app:itemTextColor="@color/bottomnavcolor"
         app:menu="@menu/bottom_nav_menu" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/noInvestment"
+        android:text="No Investments to show :)"
+        android:layout_centerInParent="true"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:visibility="gone"/>
 
 </RelativeLayout>
