--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -6,14 +6,15 @@
     android:layout_height="match_parent"
 
     tools:context=".LoanActivity">
+
     <TextView
+        android:id="@+id/txtLoan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Loan Activity"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:id="@+id/txtLoan"
-        android:textSize="18sp"/>
+        android:text="Loan Activity"
+        android:textSize="18sp" />
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -36,5 +37,15 @@
         app:itemIconTint="@color/bottomnavcolor"
         app:itemTextColor="@color/bottomnavcolor"
         app:menu="@menu/bottom_nav_menu" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/noLOan"
+        android:text="No Loans to show :)"
+        android:layout_centerInParent="true"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:visibility="gone"/>
 
 </RelativeLayout>
