--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fbTransaction"
-        android:layout_width="105dp"
-        android:layout_height="105dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="20dp"
@@ -145,6 +145,16 @@
                         android:layout_below="@id/txtTransaction"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="10dp" />
+
+                    <TextView
+                        android:id="@+id/mainNoTransaction"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/txtTransaction"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="55dp"
+                        android:text="No Transactions to Show :("
+                        android:visibility="gone" />
 
 
                 </RelativeLayout>
