--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -30,8 +30,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/txtFilters"
-                android:layout_margin="15dp"
-                android:layout_centerHorizontal="true">
+                android:layout_centerHorizontal="true"
+                android:layout_margin="15dp">
 
                 <RadioGroup
                     android:id="@+id/rgType"
@@ -156,10 +156,12 @@
                     android:id="@+id/txtNoTransaction"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="No Transaction to show"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/txtviewtransactions"
+                    android:layout_marginTop="55dp"
+                    android:text="No Transaction to show :("
                     android:textStyle="italic"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
 
             </RelativeLayout>
